   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2015-01-23 13:22 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r393)
  + hbqt/qtcore/hbqt_simulator.c
    + Added missing source in previous commit.

2015-01-23 12:54 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r392)
  * hbide/resources/hbide-2014.png
  * hbqtwidgets/resources/hbdbu-2014.png
    % Splash image copyright bumped to 2015.

  * qtcontribs.hbp
    % Minor.

  * debug/hwgdebug.hbp
    - Excluded for ios builds.

  * hbdbu/hbdbu.hbp
    % Added ${hb_build} token.

  * hbide/findreplace.prg
    ! Fixed find/replace dialog to behave the same way on OSX.

  * hbide/editor.prg
    ! Fixed to behave excatly the same way on OSX as on Windows.

  * hbide/plugins.prg
    + Enhanced to through eleborate error message for 
       "Run as Script" feature of HbIDE. 

  * hbide/projmanager.prg
    + "Run as Script" feature enhanced to supply "-n", "-I*"
        switches to the build engine. -I switch contains #include file
        paths defined in <Setup><HbIDE Setup><Projects><Include Paths>. 

  * hbide/hbide.hbp
    % Tuned to be built as a lib on ios.

  * hbnetioqt/hbnetioq.hbp
    % Added ${hb_build} token.
 
  * hbqt/qtcore/hbqtcore.hbc
  * hbqt/qtgui/hbqtgui.hbc
  * hbqt/qtnetwork/hbqtnetwork.hbc
    - Removed "s" from static libs definitions. 
       Was breaking because hbmk2 does not create a lib 
       with "s" suffix even if HB_STATIC_QT is defined.

  * hbqt/hbqt_common.hbm
    + Added ${hb_build} 

  * hbqt/qtcore/hbqtcore.hbm
    + Added hbqt_simulator.c

  * hbqt/qtbluetooth/hbqtbluetooth.hbp
  * hbqt/qtdesigner/hbqtdesigner.hbp
  * hbqt/qtopengl/hbqtopengl.hbp
  * hbqt/qtquick/hbqtquick.hbp